fixed login error

--- a/views/login.mustache
+++ b/views/login.mustache
@@ -3,6 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <style>
+
+      ul #chatMessagesList{
+        list-style: none;
+        height:50%;
+        background-color: blue;
+        color:white;
+      }
+
+    </style>
+
   </head>
   <body>
 
@@ -24,6 +35,16 @@
       <input type="submit" />
     </form>
 
+    <!-- <h2>Chat</h2>
+    <ul id="chatMessagesList">
+    </ul>
+
+    <input type="text" id="chatMessageTextBox"/>
+    <button id="btnSend">Send</button>
+
+    <p> -->
+
   </body>
-  <!-- <script src="public/trip.js"></script> -->
+  <!-- <script src="/socket.io/socket.io.js"></script>
+  <script src="/client.js"></script> -->
 </html>
