--- a/views/trips.mustache
+++ b/views/trips.mustache
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Trips</title>
-    <link rel="stylesheet" type="text/css" href="styles.css"></link>
+    <link href="https://fonts.googleapis.com/css?family=Tajawal:300,400" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
 
